--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.app {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 55px;
+  height: auto;
+  color: #00000072;
+  
+}
+p{
+  justify-content: center;
+  color: #121212;
+  word-spacing: 5px;
+  font-size: large;
+  margin-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  margin-top: 20px;
+  width: 360px;
+  height: 30px;
+  word-spacing: 5px;
+  background:rgba(0, 0, 0, 0.447);
+  font-size: 24px
+}
+.todo-list {
+  justify-content: center;
+  margin:0 auto;
+  background: #e8e8e8;
+  border-radius: 4px;
+  word-spacing: 2px;
+  color: rgba(0, 0, 0, 0.747);
+  margin: 0 auto;
+  padding : 15px;
+  max-width: 500px;
+  height: auto;
+}
+button{
+  background: #e8e8e8;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, 0.747);
+  padding: 5px;
+  font-family: 'Roboto', sans-serif;
+  max-width: 100px;
+  font-size: 20px;
+}
+*{padding: 0; margin: 0; box-sizing: border-box;}
+body{height: auto;background:#121212;}
+header {
+	background:#121212;
+	text-align: center;
+	width: 100%;
+  height: 100%;
+	background-size: cover;
+	background-attachment: fixed;
+  position: relative;
+  overflow: hidden;
+  color: rgba(255, 255, 255, 0.847)
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  margin: 30px;
+  word-spacing: 15px;
+	font-size: 80px;
+}
+
+h3, p {
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  word-spacing: 9px;
+}
+
+.todo {
+  background: #fff;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  padding: 3px 10px;
+  font-size: 22px;
+  margin-bottom: 6px;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: auto;
 }
